[package]
name = "menhir"
version = "0.1.0"
authors = ["Joris Guisson <joris.guisson@gmail.com>"]

[profile.release]
debug = true

[dependencies]
clap = "2.*"
itertools = "0.10.5"
uuid = { version = "0.2", features = ["v4"] }
llvm-sys = "140"
libc = "*"
toml = "0.7.3"
serde_derive = "1.0"
serde = {version = "1.0", features = ["rc"] }
bincode = "0.8"
either = "1.0"
