[package]
name = "menhir"
version = "0.1.0"
authors = ["Joris Guisson <joris.guisson@gmail.com>"]
edition = "2021"

[profile.release]
debug = true

[dependencies]
clap = { version = "4.2", features = ["derive"]}
itertools = "0.10.5"
uuid = { version = "0.2", features = ["v4"] }
llvm-sys = "140"
libc = "*"
toml = "0.7.3"
serde_derive = "1.0"
serde = {version = "1.0", features = ["rc"] }
bincode = "1.3.3"
either = "1.0"
