[package]
name = "menhir"
version = "0.1.0"
authors = ["Joris Guisson <joris.guisson@gmail.com>"]
edition = "2021"

[profile.release]
debug = true

[dependencies]
clap = { version = "4.2", features = ["derive"]}
itertools = "0.10.5"
uuid = { version = "0.2", features = ["v4"] }
llvm-sys = "150"
libc = "*"
toml = "0.7.3"
serde_derive = "1.0"
serde = {version = "1.0", features = ["rc"] }
ron = "0.8"
either = "1.0"
sha256 = {version = "1.4", default-features = false}
console = "0.15.7"
petgraph = "0.6.4"

[dev-dependencies]
pretty_assertions = "1.4.0"
